--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,11 @@
         }
         
         h1 {
-            color: rgb(129, 15, 15);
+            color: rgb(235, 208, 208);
             font-size: 40px;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-style: italic;
+            margin: auto;
             text-align: center;
         }
         
@@ -25,34 +26,47 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-style: italic;
             width: 200px;
+            margin: auto;
         }
         
         body {
-            background-color: rgb(97, 80, 34);
+            margin: 100px;
+            margin-top: 0px;
+            background-color: rgb(51, 15, 15);
+            border: 50px;
         }
         
         button {
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             font-weight: bolder;
             font-size: 15px;
+            height: 30px;
+            width: auto;
+            border-radius: 35px;
+            -webkit-border-radius: 35px;
+            -moz-border-radius: 35px;
+            -ms-border-radius: 35px;
+            -o-border-radius: 35px;
         }
         
         em {
             font-weight: bold;
             font-size: 17px;
             font-family: cursive;
+            color: rgb(149, 196, 40);
         }
         
         img {
             width: 150px;
             border-radius: 100px;
             height: 200px;
-            border: solid purple;
+            border: solid rgb(138, 160, 13);
             -webkit-border-radius: 100px border;
             -moz-border-radius: 100px border;
             -ms-border-radius: 100px border;
             -o-border-radius: 100px border;
-            margin: 30px;
+            margin: auto;
+            padding: 5px 5px 5px 5px;
         }
         
         h2.temmy {
@@ -61,35 +75,27 @@
             color: rgb(143, 184, 32);
         }
         
-        body.kill {
-            background-color: rgb(51, 15, 15);
-        }
-        
-        h1.bar1 {
-            color: rgb(235, 208, 208);
-            font-size: 40px;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-style: italic;
-        }
-        
         h3.bar2 {
             font-weight: 500;
             font-size: 39px;
             font-style: italic;
             color: rgb(235, 208, 208);
             text-align: center;
+            margin: auto;
         }
         
-        ol.bar3 {
+        li {
             color: rgb(235, 208, 208);
             font-size: 20px;
             font-style: italic;
+            margin: auto;
         }
         
         h2.bar4 {
             color: honeydew;
             font-style: italic;
             font-family: cursive;
+            margin: 20px;
         }
         
         pre {
@@ -99,7 +105,7 @@
             font-weight: bolder;
             border: solid 3px purple;
             border-radius: 10px;
-            -webkit-border-radius: 10px;
+            display: inline;
             -moz-border-radius: 10px;
             -ms-border-radius: 10px;
             -o-border-radius: 10px;
@@ -113,4 +119,11 @@
         .rightwing {
             padding-right: 300px;
             background-color: rgb(149, 196, 40);
+        }
+        
+        p {
+            color: honeydew;
+            font-style: italic;
+            font-family: cursive;
+            margin: 10px;
         }
