--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,10 @@
         }
         
         body {
-            margin: 20px;
+            margin: 0%;
             margin-top: 0px;
             background-color: rgb(51, 15, 15);
-            border: 50px;
+            border: 10%;
         }
         
         button {
