--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.loginpage {
+    position: relative;
+    align-self: center;
+    align-items: flex-start;
+}
 
-
-.navbar{
+.navbar {
     display: flex;
     align-items: center;
     padding: 12px 16px;
@@ -19,14 +23,15 @@ body {
     position: fixed;
 
 }
-nav{
-    flex:1;
+
+nav {
+    flex: 1;
     text-align: right;
 }
 
-nav ul{
+nav ul {
     display: inline-block;
-    list-style:none;
+    list-style: none;
 
 }
 
@@ -34,32 +39,34 @@ nav ul li {
     display: inline-block;
     margin-right: 70px;
 }
-nav ul li a{
+
+nav ul li a {
     text-decoration: none;
     font-size: 14px;
-    color:white;
+    color: white;
     font-family: sans-serif;
 }
-nav ul li button{
-    
+
+nav ul li button {
+
     font-size: 20px;
-    color:white;
+    color: white;
     outline: none;
-    cursor:pointer;
-    border:none;
+    cursor: pointer;
+    border: none;
     background: transparent;
     font-family: sans-serif;
 }
 
-nav ul li button:hover{
-    color:aqua;
+nav ul li button:hover {
+    color: aqua;
 }
 
-nav ul li a:hover{
-    color:aqua;
+nav ul li a:hover {
+    color: aqua;
 }
 
-a{
+a {
     text-decoration: none;
     font-size: 38px solid;
 }
@@ -72,11 +79,11 @@ a{
     height: auto;
 }
 
-.logo a{
+.logo a {
     font-size: 100%;
 }
 
-.logo a:hover{
+.logo a:hover {
     color: #ffffff;
 }
 
@@ -96,13 +103,13 @@ a{
     border: 0;
     outline: none;
     border-radius: 30px;
-    color:#ffffff;
+    color: #ffffff;
 }
 
 .form {
     width: 250px;
     height: 320px;
-    background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.8)50%, rgba(0, 0, 0, 0.8)50%);
     position: absolute;
     top: 150px;
     left: 5px;
@@ -111,7 +118,7 @@ a{
     color: #ffffff;
 }
 
-.input-field{
+.input-field {
     width: 100%;
     padding: 10px 0;
     margin: 5px 0;
@@ -128,7 +135,7 @@ input {
     width: 100%;
     height: 20px;
 }
-    
-#top{
-    color:rgb(149, 196, 40);
+
+#top {
+    color: rgb(149, 196, 40);
 }
