--- a/css/2kdesign.css
+++ b/css/2kdesign.css
@@ -1,17 +1,235 @@
 * {
-	padding: 0;
-	margin: 0;
-	text-decoration: none;
 	box-sizing: border-box;
+	padding: 0;
+	margin-top: 5px;
+	margin-left: 5px;
+	margin-right: 2px;
+	list-style-type: none;
+	text-decoration: none;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+section {
+	border: 3px solid black;
+	width: 100%;
+	max-width: 1400px;
+}
+
+/**NAVBAR STYLING**/
+
+.signup-btn1 {
+	background: transparent;
+	padding: 7px 35px;
+	border-radius: 20px;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	-ms-border-radius: 20px;
+	-o-border-radius: 20px;
+}
+
+.MenuItems a {
+	font-size: 9px;
+}
+
+.navbar {
+	display: flex;
+	align-items: center;
+	padding: 10px 8px;
+	background-color: transparent;
+	position: relative;
 
 }
 
+nav {
+	flex: 1;
+	text-align: right;
+}
+
+nav ul {
+	display: inline-block;
+	list-style: none;
+
+}
+
+nav ul li {
+	display: inline-block;
+	margin-right: 70px;
+}
+
+nav ul li a {
+	text-decoration: none;
+	font-size: 14px;
+	color: rgb(17, 8, 8);
+	font-family: sans-serif;
+}
+
+nav ul li button {
+
+	font-size: 20px;
+	color: black;
+	outline: none;
+	cursor: pointer;
+	border: none;
+	background: transparent;
+	font-family: sans-serif;
+}
+
+nav ul li button:hover {
+	color: aqua;
+}
+
+nav ul li a:hover,
+a:active {
+	background: rgb(118, 133, 143);
+	transition: .5s;
+
+}
+
+a {
+	text-decoration: none;
+	font-size: 38px solid;
+}
+
+.logo {
+	display: flex;
+	flex-direction: row;
+	width: 85px;
+	height: 85px;
+	margin-left: 80px;
+}
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
 	background-color: #111;
 }
 
+button:hover {
+	background-color: #111;
+}
+
 .checked {
 	color: orange;
+}
+
+img.plate-1 {
+	width: 50%;
+	height: 50%;
+}
+
+
+/**section first**/
+
+#first {
+	display: flex;
+	flex-direction: row;
+}
+
+.first-wordings {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+button.order-btn {
+	background: transparent;
+	padding: 12px 45px;
+	border-radius: 30px;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	-ms-border-radius: 30px;
+	-o-border-radius: 30px;
+}
+
+
+
+/** second section **/
+
+#second {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+
+}
+
+.item1 {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 150px;
+	width: 250px;
+	align-items: center;
+	background: #ebebeb;
+	border-radius: 25px 0px;
+	box-shadow: 4px 4px 8px #a5a5a5, -16px -16px 41px #ffffff;
+	margin-left: 2%;
+	-webkit-border-radius: 25px 0px;
+	-moz-border-radius: 25px 0px;
+	-ms-border-radius: 25px 0px;
+	-o-border-radius: 25px 0px;
+}
+
+.item2 {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: 15px;
+	height: 150px;
+	width: 250px;
+	align-items: center;
+	background: #ebebeb;
+	border-radius: 25px 0px;
+	box-shadow: 4px 4px 8px #a5a5a5, -16px -16px 41px #ffffff;
+	-webkit-border-radius: 25px 0px;
+	-moz-border-radius: 25px 0px;
+	-ms-border-radius: 25px 0px;
+	-o-border-radius: 25px 0px;
+}
+
+
+
+.item3 {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 150px;
+	width: 250px;
+	background: #ebebeb;
+	border-radius: 25px 0px;
+	box-shadow: 4px 4px 8px #a5a5a5, -16px -16px 41px #ffffff;
+	margin-left: 2%;
+	-webkit-border-radius: 25px 0px;
+	-moz-border-radius: 25px 0px;
+	-ms-border-radius: 25px 0px;
+	-o-border-radius: 25px 0px;
+}
+
+.location-img {
+	height: 47px;
+	width: 47px;
+	align-items: center;
+}
+
+/**third section**/
+
+#third {
+	display: grid;
+	grid-template-columns: 50% 50%;
+	gap: 30px;
+}
+
+.plate-3 {
+
+	height: 50%;
+	width: 80%;
+	align-items: center;
+}
+
+.plate-2 {
+	height: 30%;
+	width: 30%;
+	align-items: right;
 }
