--- a/css/page.css
+++ b/css/page.css
@@ -1,19 +1,19 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-.full-page{
-    height:100%;
-    width:100%;
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('../images/unique.jpg');
+.full-page {
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../images/unique.jpg');
     background-position: center;
     background-size: cover;
     position: absolute;
 }
 
-.navbar{
+.navbar {
     display: flex;
     align-items: center;
     padding: 20px;
@@ -22,14 +22,15 @@
     padding-top: 50px;
 
 }
-nav{
-    flex:1;
+
+nav {
+    flex: 1;
     text-align: right;
 }
 
-nav ul{
+nav ul {
     display: inline-block;
-    list-style:none;
+    list-style: none;
 
 }
 
@@ -37,61 +38,64 @@ nav ul li {
     display: inline-block;
     margin-right: 70px;
 }
-nav ul li a{
+
+nav ul li a {
     text-decoration: none;
     font-size: 20px;
-    color:white;
+    color: white;
     font-family: sans-serif;
 }
-nav ul li button{
-    
+
+nav ul li button {
+
     font-size: 20px;
-    color:white;
+    color: white;
     outline: none;
-    cursor:pointer;
-    border:none;
+    cursor: pointer;
+    border: none;
     background: transparent;
     font-family: sans-serif;
 }
 
-nav ul li button:hover{
-    color:aqua;
+nav ul li button:hover {
+    color: aqua;
 }
 
-nav ul li a:hover{
-    color:aqua;
+nav ul li a:hover {
+    color: aqua;
 }
 
-a{
-    color:palevioletred;
+a {
+    color: palevioletred;
     text-decoration: none;
     font-size: 38px solid;
 }
 
-#login-form{
+/****form side****/
+#login-form {
     display: none;
-} 
+}
 
-.form-box{
+.form-box {
     width: 380px;
     height: 480px;
     position: relative;
     margin: 2% auto;
-    background: rgba(0,0,0,0.3);
+    background: rgba(0, 0, 0, 0.3);
     padding: 10px;
     overflow: hidden;
 }
 
-.button-box{
+.button-box {
     width: 220px;
     margin: 35px auto;
     position: relative;
     box-shadow: 0 0 20px 9px #ff61241f;
     border-radius: 30px;
-    
+
 }
 
-.toggle-btn{
+.toggle-btn {
     padding: 10px 30px;
     cursor: pointer;
     background: transparent;
@@ -100,33 +104,33 @@ a{
     position: relative;
 }
 
-#btn{
+#btn {
     top: 0;
     left: 0;
     position: absolute;
-    width:110px;
+    width: 110px;
     height: 100%;
     background: #F3C693;
     border-radius: 30px;
     transition: 0.5s;
 }
 
-.input-group-login{
-    top:150px;
+.input-group-login {
+    top: 150px;
     position: relative;
     width: 280px;
     transition: 0.5s;
 }
 
-.input-group-register{
-    top:120px;
+.input-group-register {
+    top: 120px;
     position: absolute;
     width: 280px;
     transition: 0.5s;
-  
+
 }
 
-.input-field{
+.input-field {
     width: 100%;
     padding: 10px 0;
     margin: 5px 0;
@@ -138,7 +142,7 @@ a{
     background: transparent;
 }
 
-.submit-btn{
+.submit-btn {
     width: 85%;
     padding: 10px 30px;
     cursor: pointer;
@@ -150,48 +154,31 @@ a{
     border-radius: 30px;
 }
 
-.check-box{
+.check-box {
     margin: 30px 10px 34px 0;
 }
 
-span{ 
+span {
     color: #777;
     font-size: 12px;
     bottom: 68px;
     position: absolute;
 }
 
-#login{
+#login {
     left: 50px;
 }
 
-#login input{
+#login input {
     color: white;
     font-size: 15px;
-} 
+}
 
-#register{
+#register {
     left: 450px;
 }
 
-#register input{
+#register input {
     color: white;
     font-size: 15px;
-} 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
